# dbt-doctor

./: .gitignore  ARCHITECTURE_AND_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_run.py
.github/workflows/: ci.yml  publish.yml
src/dbt_doctor/: __init__.py  server.py
src/dbt_doctor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dbt_doctor/analyzers/: auditor.py  dag_analyzer.py  drift_detector.py  profiler.py
src/dbt_doctor/connectors/: base.py  duckdb.py  postgres.py
src/dbt_doctor/core/: manifest.py  profiles.py  project.py  schema_reader.py
src/dbt_doctor/generators/: doc_generator.py  test_suggester.py  yaml_writer.py
src/dbt_doctor/utils/: sql_sanitizer.py
src/dbt_sage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_auditor.py  test_dag_analyzer.py  test_manifest_parser.py  test_profiler.py  test_test_suggester.py  test_yaml_writer.py
tests/fixtures/: __init__.py  sample_manifest.json
